<resources>
    <string name="app_name">Qdemy</string>
    <string name="salveaz">Salvează</string>
    <string name="parola">Parola</string>
    <string name="mail_institu_ional">Mail instituțional</string>
    <string name="nume">Nume</string>
    <string name="creeaz_cont">Creează cont</string>
    <string name="intr_n_cont">Intră în cont</string>
    <string name="istoricul_testelor">Istoricul testelor</string>
    <string name="acceseaz">ACCESEAZĂ</string>
    <string name="a_teapt">Așteaptă...</string>
    <string name="codul_testului">CODUL testului</string>
    <string name="logo">logo</string>
    <string name="renun">Renunță</string>
    <string name="materia">-materia-</string>
    <string name="nume_intrebare">-nume intrebare-</string>
    <string name="text_intrebare">-text intrebare-</string>
    <string name="text_raspuns">-text raspuns-</string>
    <string name="corect">Corect</string>
    <string name="adaug_ntrebarea">Adaugă întrebarea</string>
    <string name="inapoi">inapoi</string>
    <string name="nume_test">-nume test-</string>
    <string name="descriere_test">-descriere test-</string>
    <string name="materia1">Materia:</string>
    <string name="adaug_testul">Adaugă testul</string>
    <string name="durata">Durata:</string>
    <string name="actualizeaz_ntrebarea">Actualizează întrebarea</string>
    <string name="actualizeaz_testul">Actualizează testul</string>
    <string name="_99_99">99:99</string>
    <string name="intrebare">-intrebare-</string>
    <string name="sari_peste">Sari peste</string>
    <string name="raspuns">-raspuns-</string>
    <string name="istoric">Istoric</string>
    <string name="test">Test</string>
    <string name="data">Data</string>
    <string name="media">Media</string>
    <string name="punctaj">Punctaj</string>
    <string name="ntreb_rile_mele">Întrebările mele</string>
    <string name="adaug_materia">Adaugă materia</string>
    <string name="partajeaz_testul">Partajează testul</string>
    <string name="persoane_cu_acces_la_acest_test">Persoane cu acces la acest test:</string>
    <string name="test_n_desf_urare">Test în desfășurare...</string>
    <string name="testele_mele">Testele mele</string>
    <string name="start_test">start test</string>
    <string name="_100">100</string>
    <string name="promovati">-promovati-</string>
    <string name="nume_student">-nume student-</string>
    <string name="ntrebare">Întrebare</string>
    <string name="promovat1">-promovat?-</string>
    <string name="studen_i">Studenți</string>
    <string name="ntreb_ri">Întrebări</string>
    <string name="selecteaz_testul">Selectează testul</string>
    <string name="asdfgh">-ASDFGH-</string>
    <string name="list_studen_i_conecta_i">Listă studenți conectați</string>
    <string name="individual">Individual</string>
    <string name="echipe">Echipe</string>
    <string name="start">Start</string>
    <string name="editeaza">editeaza</string>
    <string name="partajeaza">partajeaza</string>
    <string name="adauga">adauga</string>
    <string name="inregistrare_succes">Contul a fost înregistrat cu succes!</string>
    <string name="inregistrare_eroare">Contul NU a putut fi înregistrat!</string>
    <string name="autentificare_eroare">Date de autentificare invalide!</string>
    <string name="poo">Programare orientată obiect</string>
    <string name="sdd">Structuri de date</string>
    <string name="java">Progamare JAVA</string>
    <string name="paw">Programarea aplicațiilor Windows</string>
    <string name="dam">Dispozitive și aplicații mobile</string>
    <string name="tw">Tehnologii Web</string>
    <string name="deconectare_message">Dorești să te deconectezi?</string>
    <string name="deconectare_title">Deconectare</string>
    <string name="privat">privat</string>
    <string name="public1">public</string>
    <string name="utilizator">Utilizator</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="stergere_intrebare_message">Sigur dorești să ștergi această întrebare?</string>
    <string name="stergere_materie_message">Dorești să elimini această materie din profilul tău?</string>
    <string name="usor">ușor</string>
    <string name="mediu">mediu</string>
    <string name="greu">greu</string>
    <string name="stergere_test_message">Sigur dorești să ștergi acest test?</string>
    <string name="student">student</string>
    <string name="stergere_partajare_message">Dorești să elimini dreptul de acces la acest test lui</string>
    <string name="profesor">profesor</string>
    <string name="timp">Timp</string>
    <string name="corecte">Corecte</string>
    <string name="Nume_student1">Nume student</string>
    <string name="completeaza_nume">Completează câmpul - Nume!</string>
    <string name="completeaza_parola">Completează câmpul - Parola!</string>
    <string name="completeaza_mail">Completează câmpul - Mail instituțional!</string>
    <string name="completeaza_ambele_campuri">Completează ambele câmpuri!</string>
    <string name="error_message_min_2_variante">Sunt obligatorii minim 2 variante de răspuns!</string>
    <string name="estePublic1">-public-</string>
    <string name="minute1">-minute-</string>
    <string name="test_public">test public</string>
    <string name="test_privat">test privat</string>
    <string name="minute2">%1$d minute</string>
    <string name="tip">tip</string>
    <string name="completeaza_utilizator">Completează câmpul - Utiliator!</string>
    <string name="eroare_utilizator_deja_inregistrat">Acest utilizator este deja înregistrat în baza de date!</string>
    <string name="mail_invalid">Mailul este invalid!</string>
    <string name="salutare">Salutare </string>
    <string name="prenume">Prenume</string>
    <string name="completeaza_prenume">Completează câmpul - Prenume!</string>
    <string name="aduga_intrebare_eroare">Întrebarea NU a fost salvată!</string>
    <string name="variante_de_r_spuns">Variante de răspuns:</string>
    <string name="error_message_min_1_corect">Este obligatoriu minim un răspuns corect!</string>
    <string name="error_message_intrebare_existenta">Această întrebare este deja salvată!</string>
    <string name="error_message_test_existent">Un test cu același nume este deja înregistrat!</string>
    <string name="error_message_intrebare_inexistenta">Întrebare inexistentă!</string>
    <string name="error_message_intrebare_invalida">Întrebare invalidă!</string>
    <string name="error_message_min_1_intrebare">Este obligatorie minim o întrebare selectată!</string>
    <string name="error_message_nume_inexistent">Nume inexistent!</string>
    <string name="error_message_descriere_inexistenta">Descriere inexistentă!</string>
    <string name="erroe_message_start_test">Testul nu se poate desfășura!</string>
    <string name="test_txt">test.txt</string>
    <string name="error_message_citire_cod_test">Codul testului nu a putut fi citit!</string>
    <string name="selecteaza_testul">Selectează testul</string>
    <string name="error_message_cod_invalid">Codul este invalid!</string>
    <string name="error_message_test_deja_sustinut">Ai susținut deja acest test!</string>
    <string name="selectare_maxima_variante_raspuns">Poți selecta maxim %1$d variante de răspuns!</string>
    <string name="corecte2">corecte</string>
    <string name="partiale">parțiale</string>
    <string name="gresite">greșite</string>
    <string name="testLive">testLive</string>
    <string name="error_message_app_mail">Nu există nicio aplicație de email instalată!</string>
    <string name="trimite_mail">Trimite mail</string>
    <string name="trimite_mail2">Trimite mail...</string>
    <string name="alege_profesorul">Alege profesorul:</string>
    <string name="cauta_intrebarea">Caută întrebarea</string>
    <string name="cauta_testul">Caută testul</string>
    <string name="teste_publice">Teste publice</string>
    <string name="autor_test_public">Autor: %1$s %2$s</string>
    <string name="nota">Ai obținut nota</string>
    <string name="terminare_test">Ai terminat testul!</string>
    <string name="rezolva_alt_test">Rezolvă alt test!</string>
    <string name="error_message_niciun_test_sustinut">Nu există niciun test susținut!</string>
    <string name="selecteaz_ntreb_rile">Selectează întrebările:</string>
</resources>
