<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditeazaTestActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/partajeaza_button_editeazaTest"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/partajeaza"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_share_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nume_text_editeazaTest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:hint="@string/nume_test"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriere_text_editeazaTest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="1.5"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriere_textInput_editeazaTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/descriere_test"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/tipuri_radioGroup_editeazaTest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/privat_radioButton_editeazaTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/privat"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/public_radioButton_editeazaTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:text="@string/public1"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/durata_text_adaugaTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/durata"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/durate_spinner_editeazaTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="3"
                android:gravity="center" />

        </LinearLayout>

        <ListView
            android:id="@+id/intrebari_list_editeazaTest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="4.5">

        </ListView>

        <Button
            android:id="@+id/actualizeaza_button_editeazaTest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/actualizeaz_testul"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_image_editeazaTest"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/inapoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

</android.support.constraint.ConstraintLayout>